bindings/unity/Runtime/Native/xybrid.h

/*
 Opaque handle to a model loader.

 This handle is created by `xybrid_model_loader_from_registry`,
 `xybrid_model_loader_from_bundle`, or `xybrid_model_loader_from_directory`
 and must be freed with `xybrid_model_loader_free`.
 */
typedef struct XybridModelLoaderHandle {
  void *_0;
} XybridModelLoaderHandle;
/*
 Opaque handle to a loaded model.

 This handle is created by `xybrid_model_loader_load` and must be
 freed with `xybrid_model_free`.
 */
typedef struct XybridModelHandle {
  void *_0;
} XybridModelHandle;
/*
 Opaque handle to an envelope (input data).

 This handle is created by `xybrid_envelope_audio` or `xybrid_envelope_text`
 and must be freed with `xybrid_envelope_free`.
 */
typedef struct XybridEnvelopeHandle {
  void *_0;
} XybridEnvelopeHandle;
/*
 Opaque handle to a conversation context.

 This handle is created by `xybrid_context_new` and must be freed with
 `xybrid_context_free`.
 */
typedef struct XybridContextHandle {
  void *_0;
} XybridContextHandle;
/*
 Opaque handle to a generation config.

 This handle is created by `xybrid_generation_config_new` (or a preset
 like `xybrid_generation_config_greedy`) and must be freed with
 `xybrid_generation_config_free`.
 */
typedef struct XybridGenerationConfigHandle {
  void *_0;
} XybridGenerationConfigHandle;
/*
 Opaque handle to an inference result.

 This handle is created by `xybrid_model_run` and must be freed with
 `xybrid_result_free`.
 */
typedef struct XybridResultHandle {
  void *_0;
} XybridResultHandle;
/*
 Opaque handle to a loaded bundle.

 This handle is created by `xybrid_bundle_open` and must be freed with
 `xybrid_bundle_free`.
 */
typedef struct XybridBundleHandle {
  void *_0;
} XybridBundleHandle;
/*
 Load a model using the loader.

 This function loads the model from the registry, local bundle, or directory,
 depending on how the loader was created.

 # Parameters

 - `handle`: A handle to the model loader created by `xybrid_model_loader_from_registry`,
   `xybrid_model_loader_from_bundle`, or `xybrid_model_loader_from_directory`.

 # Returns

 A handle to the loaded model, or null on failure.
 On failure, call `xybrid_last_error()` to get the error message.

 # Example (C)

 ```c
 XybridModelHandle* model = xybrid_model_loader_load(loader);
 if (model == NULL) {
     fprintf(stderr, "Failed: %s\n", xybrid_last_error());
     xybrid_model_loader_free(loader);
     return 1;
 }
 // Use model...
 xybrid_model_free(model);
 xybrid_model_loader_free(loader);
 ```
 */
struct XybridModelHandle *xybrid_model_loader_load(struct XybridModelLoaderHandle *handle);
 XybridEnvelopeHandle* envelope = xybrid_envelope_audio(
     audio_data, sizeof(audio_data), 16000, 1);
 // Use envelope...
 xybrid_envelope_free(envelope);
 ```
 */
struct XybridEnvelopeHandle *xybrid_envelope_audio(const uint8_t *bytes,
                                                   uintptr_t len,
                                                   uint32_t sample_rate,
                                                   uint32_t channels);
/*
 Create an envelope containing text data.

 This function creates an envelope containing text for TTS or LLM inference.

 # Parameters

 - `text`: A null-terminated string containing the text. Must not be null.

 # Returns

 A handle to the envelope, or null on failure.
 On failure, call `xybrid_last_error()` to get the error message.

 # Example (C)

 ```c
 XybridEnvelopeHandle* envelope = xybrid_envelope_text("Hello, world!");
 if (envelope == NULL) {
     fprintf(stderr, "Failed: %s\n", xybrid_last_error());
     return 1;
 }
 // Use envelope...
 xybrid_envelope_free(envelope);
 ```
 */
struct XybridEnvelopeHandle *xybrid_envelope_text(const char *text);
/*
 Free an envelope handle.

 This function frees the memory associated with an envelope handle.
 After calling this function, the handle is no longer valid.

 # Parameters

 - `handle`: A handle to the envelope to free. May be null (no-op).

 # Example (C)

 ```c
 xybrid_envelope_free(envelope);
 envelope = NULL; // Good practice: null out after freeing
 ```
 */
void xybrid_envelope_free(struct XybridEnvelopeHandle *handle);
/*
 Create a new conversation context with a generated UUID.

 # Returns

 A handle to the conversation context, or null on failure.

 # Example (C)

 ```c
 XybridContextHandle* ctx = xybrid_context_new();
 if (ctx == NULL) {
     fprintf(stderr, "Failed: %s\n", xybrid_last_error());
     return 1;
 }
 // Use context...
 xybrid_context_free(ctx);
 ```
 */
struct XybridContextHandle *xybrid_context_new(void);
/*
 Free a conversation context handle.

 This function frees the memory associated with a context handle.
 After calling this function, the handle is no longer valid.

 # Parameters

 - `handle`: A handle to the context to free. May be null (no-op).
 */
void xybrid_context_free(struct XybridContextHandle *handle);
/*
 Run inference on a model with the given input envelope.

 This function executes inference using the loaded model and returns
 a result handle containing the output or error information.

 # Parameters

 - `model`: A handle to the loaded model (from `xybrid_model_loader_load`).
 - `envelope`: A handle to the input envelope (from `xybrid_envelope_audio` or `xybrid_envelope_text`).

 # Returns

 A handle to the result, or null on failure.
 On failure, call `xybrid_last_error()` to get the error message.
 The envelope is NOT consumed - it can be reused for multiple inferences.

 # Example (C)

 ```c
 XybridResultHandle* result = xybrid_model_run(model, envelope, std::ptr::null_mut());
 if (result == NULL) {
     fprintf(stderr, "Inference failed: %s\n", xybrid_last_error());
     return 1;
 }

 if (xybrid_result_success(result)) {
     const char* text = xybrid_result_text(result);
     printf("Result: %s\n", text);
 } else {
     const char* error = xybrid_result_error(result);
     printf("Error: %s\n", error);
 }

 xybrid_result_free(result);
 ```
 */
struct XybridResultHandle *xybrid_model_run(struct XybridModelHandle *model,
                                            struct XybridEnvelopeHandle *envelope,
                                            struct XybridGenerationConfigHandle *config);
/*
 Free a model handle.

 This function frees the memory associated with a model handle.
 After calling this function, the handle is no longer valid.

 # Parameters

 - `handle`: A handle to the model to free. May be null (no-op).

 # Example (C)

 ```c
 xybrid_model_free(model);
 model = NULL; // Good practice: null out after freeing
 ```
 */
void xybrid_model_free(struct XybridModelHandle *handle);
/*
 Free an inference result handle.

 This function frees the memory associated with an inference result handle.
 After calling this function, the handle is no longer valid.

 # Parameters

 - `handle`: A handle to the result to free. May be null (no-op).

 # Example (C)

 ```c
 XybridResultHandle* result = xybrid_model_run(model, envelope, std::ptr::null_mut());
 // ... use result ...
 xybrid_result_free(result);
 result = NULL; // Good practice: null out after freeing
 ```
 */
void xybrid_result_free(struct XybridResultHandle *handle);
/*
 Open a .xyb bundle file and return a handle.

 Loads the bundle into memory (decompresses zstd, parses tar, validates manifest).
 The returned handle can be used with other `xybrid_bundle_*` functions.

 # Parameters

 - `path`: Null-terminated UTF-8 path to the .xyb file.

 # Returns

 A handle to the opened bundle, or null on error (check `xybrid_last_error()`).

 # Example (C)

 ```c
 XybridBundleHandle* bundle = xybrid_bundle_open("/path/to/model.xyb");
 if (!bundle) {
     fprintf(stderr, "Failed: %s\n", xybrid_last_error());
 }
 ```
 */
struct XybridBundleHandle *xybrid_bundle_open(const char *path);
/*
 Free a bundle handle.

 After calling this function, the handle is no longer valid.

 # Parameters

 - `handle`: A handle to the bundle to free. May be null (no-op).
 */
void xybrid_bundle_free(struct XybridBundleHandle *handle);