bindings/unity/Runtime/Native/NativeMethods.g.cs


    /// <summary>
    ///  Opaque handle to a loaded model.
    ///
    ///  This handle is created by `xybrid_model_loader_load` and must be
    ///  freed with `xybrid_model_free`.
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct XybridModelHandle
    {
        public void* Item1;
    }

    /// <summary>
    ///  Opaque handle to an envelope (input data).
    ///
    ///  This handle is created by `xybrid_envelope_audio` or `xybrid_envelope_text`
    ///  and must be freed with `xybrid_envelope_free`.
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct XybridEnvelopeHandle
    {
        public void* Item1;
    }

    /// <summary>
    ///  Opaque handle to an inference result.
    ///
    ///  This handle is created by `xybrid_model_run` and must be freed with
    ///  `xybrid_result_free`.
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct XybridResultHandle
    {
        public void* Item1;
    }

    /// <summary>
    ///  Opaque handle to a conversation context.
    ///
    ///  This handle is created by `xybrid_context_new` and must be freed with
    ///  `xybrid_context_free`.
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct XybridContextHandle
    {
        public void* Item1;
    }

    /// <summary>
    ///  Opaque handle to a loaded bundle.
    ///
    ///  This handle is created by `xybrid_bundle_open` and must be freed with
    ///  `xybrid_bundle_free`.
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct XybridBundleHandle
    {
        public void* Item1;
    }



}
